Refactor risk assessment api/domain objects naming
