# src/main/java/dev/b6k/fds/transaction/riskassessment/delivery/TransactionRiskAssessmentHttpEndpoint.java
@@ -1,0 +1,20 @@
+package dev.b6k.fds.transaction.riskassessment.delivery;
+
+import dev.b6k.fds.model.TransactionRiskAssessmentRequest;
+import dev.b6k.fds.model.TransactionRiskAssessmentResponse;
+import dev.b6k.fds.rest.TransactionRiskAssessmentApi;
+import dev.b6k.fds.transaction.riskassessment.TransactionRiskAssessmentService;
+import lombok.RequiredArgsConstructor;
+
+@RequiredArgsConstructor
+class TransactionRiskAssessmentHttpEndpoint implements TransactionRiskAssessmentApi {
+    private final TransactionRiskAssessmentService transactionRiskAssessmentService;
+
+    @Override
+    public TransactionRiskAssessmentResponse assessTransactionRisk(TransactionRiskAssessmentRequest request) {
+        var transactionDetails = TransactionRiskAssessmentHelper.toTransactionDetails(request);
+        var result = transactionRiskAssessmentService.assessTransactionRisk(transactionDetails);
+
+        return TransactionRiskAssessmentHelper.toResponse(result);
+    }
+}
